--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -16,5 +16,6 @@
     "--compile-commands-dir=${workspaceFolder}\\build"
   ],
   "idf.flashType": "UART",
-  "idf.portWin": "COM4"
+  "idf.portWin": "COM6",
+  "idf.currentSetup": "d:\\esp\\v5.5\\esp-idf"
 }
